# Phasor_Noise_Perso

./: .gitignore  AUTHORS  LICENSE  Makefile  README.md  README.rst  main.py  requirements.txt  setup.cfg  setup.py
app/: application.py  config.json
app/analysis/: noise_stat.py  psd.py
application/GUI/: menu.py  platform_specific.py  window.py
docs/: make.bat
docs/source/: conf.py  index.rst
docs/source/api/: index.rst
docs/source/api/GUI/: index.rst  menu.rst
docs/source/api/analysis/: index.rst
docs/source/api/generator/: index.rst
docs/source/getting_started/: index.rst  installation.rst
docs/source/user_guide/: index.rst
src/phasor-noise/GUI/: window.py
src/phasor-noise/analysis/: statistics.py
src/phasor_noise/: __init__.py
src/phasor_noise/GUI/: __init__.py  directory.py  menu.py  platform_specific.py  window.py
src/phasor_noise/analysis/: __init__.py  power_spectrum_density.py  statistics.py
src/phasor_noise/generator/: __init__.py
src/phasor_noise/phasor_noise_generator/: generator.py
