[metadata]

name = Phasor Noise

author = Alexis Le Meur, Etienne Tachouzin, Paul Martin, Guillaume Hisleur, Paul Bedrossian
author_email = etienne.tachouzin64@gmail.com
maintainer = Alexis Le Meur, Etienne Tachouzin, Paul Martin, Guillaume Hisleur, Paul Bedrossian
maintainer_email = etienne.tachouzin64@gmail.com
description_file = README.rst
home_page = https://github.com/etachouzin/phasor_noise
license = GNU

keywords =
    phasor_noise
    dev

[options]
package_dir=
    =src

[files]
packages =
    phasor_noise

[pbr]
skip_changelog = 1

[sdist_wheel]
universal = 1